--- a/templates/feedback/base.html
+++ b/templates/feedback/base.html
@@ -8,11 +8,41 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
-    <body class="container">
+    <body class="container" onload="ajaxSetup()">
         <h2><b>{{ request.user.first_name }}</b></h2>
         <h3><b>{{ paper_offering.course.title }} {{ request.user.startYear }} Batch, Semester {{ request.user.get_semester }} </b></h3>
         <hr>
         {% block content %}
         {% endblock %}
+
+        <script>
+            function ajaxSetup() {
+                $.ajaxSetup({
+                    beforeSend: function (xhr, settings) {
+                        function getCookie(name) {
+                            var cookieValue = null;
+                            if (document.cookie && document.cookie != '') {
+                                var cookies = document.cookie.split(';');
+                                for (var i = 0; i < cookies.length; i++) {
+                                    var cookie = jQuery.trim(cookies[i]);
+                                    // Does this cookie string begin with the name we want?
+                                    if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                                        break;
+                                    }
+                                }
+                            }
+                            return cookieValue;
+                        }
+
+                        if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+                            // Only send the token to relative URLs i.e. locally.
+                            xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+                        }
+                    }
+                });
+            }
+
+        </script>
     </body>
 </html>
