--- a/templates/faculty/base.html
+++ b/templates/faculty/base.html
@@ -9,7 +9,13 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body class="container" onload="ajaxSetup()">
-        <h2><b>Hi {{ request.user.first_name }}! </b></h2>
+        <div class="jumbotron" style="background: url('{% static 'background.jpg' %}')">
+            <h2><b>Hi {{ request.user.first_name }}! </b></h2>
+            {% block subheading %}
+            <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
+            responsive, mobile-first projects on the web.</p>
+            {% endblock %}
+        </div>
 
         <hr>
         {% block content %}
