--- a/feedback/static/base_css.css
+++ b/feedback/static/base_css.css
@@ -118,4 +118,87 @@ span.psw {
        width: 100%;
     }
 }
+ .header{
+               background-color:#263238;
+               width:100%;
+               color:white;
+               padding:30px;
+            }
 
+            .row{
+
+              color:#bdbdbd;
+            }
+
+        .img_box{
+
+            position:absolute;
+            top:150px;
+            margin-left:30%;
+        }
+
+        img{
+            border-radius:50%;
+        }
+
+.flip-card {
+  position:relative;
+  top:50px;
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-back{
+  background-color:#1976d2;
+  color: white;
+  z-index: 1;
+}
+
+.flip-card-front{
+  background-color:white;
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 2;
+}
+
+.tick{
+   position:relative;
+   margin-top:100px;
+
+}
+
+.wrong{
+   position:relative;
+   margin-top:100px;
+}
+
+.box{
+  position:relative;
+  margin-top:80px;
+  font-size:20px;
+  color:white;
+}
