--- a/feedback/static/base_css.css
+++ b/feedback/static/base_css.css
@@ -133,8 +133,8 @@ span.psw {
         .img_box{
 
             position:absolute;
-            top:150px;
-            margin-left:30%;
+            align-content: center;
+            width:100%;
         }
 
         img{
