--- a/templates/faculty/base.html
+++ b/templates/faculty/base.html
@@ -9,7 +9,31 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body class="container" onload="ajaxSetup()">
-        <div class="jumbotron" style="background: url('{% static 'background.jpg' %}')">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Academic Feedback</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="#contact"></a></li>
+              </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="">Logged in as <b>{{ request.user.first_name }} {% if request.user.roll %}( {{ request.user.roll }} ) {% endif %}</b></a></li>
+                    <li><a class="btn btn-danger" style="color:white" href="/logout">Logout</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </nav>
+
+        <div class="jumbotron" style="margin-top:150px; background: url('{% static 'background.jpg' %}')">
             <h2><b>Hi {{ request.user.first_name }}! </b></h2>
             {% block subheading %}
             <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
